--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -327,6 +327,9 @@
 
 <div class="content" role="main">
 
+  <!-- Hero header -->
+  <app-hero-header></app-hero-header>
+
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
